# glfwdemo1

./: CMakeLists.txt  README.md  glad.c  main.cpp  r.sh
includes/glad/: glad.h
